---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2025-03-24
  Changes:
    - Custom thumnail, tech and recipe icons
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025-03-23
  Changes:
    - Description updated.
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025-03-23
  Changes:
    - Default keybinding changed to SHIFT + TAB.
    - Marked as incompatible with Avatars for now.
    - Recipe moved to the 'transport' subgroup.
    - Thumbnail updated.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-03-23
  Bugfixes:
    - Fixed crash due to nil crafting_queue.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-03-23
  Changes:
    - Fixed a startup crash for characters that have no crafting categories.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-03-23
  Features:
    - Fixed missing locale entry for the character switch keybinding.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-03-22
  Features:
    - Initial release.