@@ -3,12 +3,8 @@
     "author": "thesixthroc",
     "version": "1.0.6",
     "title": "Clones",
-    "description": "Players can handcraft character clones out of nutrients and bioflux.\n\nA new keybinding switches players between each of their characters (defaults to SHIFT+TAB).",
+    "description": "Players can handcraft character clones out of nutrients and bioflux.\n\nA new keybinding switches players between each of their characters (defaults to CTRL+TAB).",
     "contact": "Discord: thesixthroc",
     "factorio_version": "2.0",
-    "dependencies": [
-        "base >= 2.0.41",
-        "space-age >= 2.0.41",
-        "! Avatars"
-    ]
+    "dependencies": ["base >= 2.0.41", "space-age >= 2.0.41", "! Avatars"]
 }
